syntax = "proto3";

package member;

option go_package = "./pb";

message CodeMessageResult {
  int64 code = 1;
  string message = 2;
}

message MemberData {
  int64 id = 1; //用户唯一标识符，主键
  string username = 2; //用户登录时使用的用户名
  string password = 3; //用户账户的密码，应存储加密后的值
  string nickname = 4; //用户在系统中显示的名字，可选
  string avatar = 5; //用户头像的URL或路径
  string quote = 6; //用户设置的个人座右铭或签名
  string birthday = 7; //用户的出生日期，用于个性化服务或统计
  int64 gender = 8; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 9; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 10; //用户的联系电话，可用于身份验证或联系用户
  int64 status = 11; //状态，0表示禁用，1表示正常启用
  int64 deleted = 12; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
  string remark = 13; //对记录的备注信息，如特殊说明等
  string create_at = 14; //记录创建的时间戳
  string create_by = 15; //创建该记录的用户标识符
}

// 删除用户
message DeleteMemberIds {
  repeated int64 ids = 1;
}

// 查询用户详情（通过id）
message QueryMemberDetailById {
  int64 id = 1;
}

// 查询用户详情（通过用户名）
message QueryMemberDetailByUsername {
  string username = 1;
}

// 分页查询用户列表
message QueryPageMemberList {
  int64 page = 1; //第几页
  int64 size = 2; //每页的数量
  string keyword = 3; //关键字
}

message QueryPageMemberListResult {
  int64 total = 1; //总数
  int64 size = 2; //每页的数量
  repeated MemberData list = 3; //列表
}

// 用户基础信息服务
service Member {
  // 添加用户
  rpc CreateMember(MemberData) returns (CodeMessageResult){}
  // 删除用户
  rpc DeleteMember(DeleteMemberIds) returns (CodeMessageResult){}
  // 更新用户
  rpc UpdateMember(MemberData) returns (CodeMessageResult){}
  // 查询用户详情（通过id）
  rpc GetMemberDetailById(QueryMemberDetailById) returns (MemberData){}
  // 查询用户详情（通过用户名）
  rpc GetMemberDetailByUsername(QueryMemberDetailByUsername) returns (MemberData){}
  // 查询用户分页列表
  rpc GetKeywordPageMemberList(QueryPageMemberList) returns (QueryPageMemberListResult){}
}
